kafka/broker: add customisable KAFKA_GC_LOG_OPTS in kafka env