@@ -200,6 +200,9 @@ This Fixs are needed to be able to isolate confs betwwen broker and client
           write: [
             match: RegExp "^KAFKA_ENV=.*$", 'mg'
             replace: "KAFKA_ENV=#{kafka.broker.conf_dir}/kafka-env.sh # RYBA DON'T OVERWRITE"
+          ,
+            match: RegExp "KAFKA_GC_LOG_OPTS=\"[^\"]+\"", 'mg'
+            replace: "KAFKA_GC_LOG_OPTS=\"-Xloggc:$LOG_DIR/$GC_LOG_FILE_NAME -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps #{kafka.broker.env['KAFKA_GC_LOG_OPTS']} \" # RYBA DON'T OVERWRITE"
           ]
           backup: true
           eof: true
